contd use camunda api for bpmn scanner