@@ -59,138 +59,107 @@ import java.util.Collection;
  */
 public class DmnTaskCheckerTest {
 
-	private static final String BASE_PATH = "src/test/resources/";
+    private static final String BASE_PATH = "src/test/resources/";
 
-	private static DmnTaskChecker checker;
+    private static DmnTaskChecker checker;
 
-	private static ClassLoader cl;
+    private static ClassLoader cl;
 
-	private final Rule rule = new Rule("DmnTaskChecker", true, null, null, null, null);
+    private final Rule rule = new Rule("DmnTaskChecker", true, null, null, null, null);
 
-	@BeforeClass
-	public static void setup() throws MalformedURLException {
-		final File file = new File(".");
-		final String currentPath = file.toURI().toURL().toString();
-		final URL classUrl = new URL(currentPath + "src/test/java");
-		final URL[] classUrls = { classUrl };
-		cl = new URLClassLoader(classUrls);
-		RuntimeConfig.getInstance().setClassLoader(cl);
-		RuntimeConfig.getInstance().getResource("en_US");
-	}
+    @BeforeClass
+    public static void setup() throws MalformedURLException {
+        final File file = new File(".");
+        final String currentPath = file.toURI().toURL().toString();
+        final URL classUrl = new URL(currentPath + "src/test/java");
+        final URL[] classUrls = { classUrl };
+        cl = new URLClassLoader(classUrls);
+        RuntimeConfig.getInstance().setClassLoader(cl);
+        RuntimeConfig.getInstance().getResource("en_US");
+    }
 
-	/**
-	 * Case: DMN task with correct DMN-File
-	 *
-	 */
+    /**
+     * Case: DMN task with correct DMN-File
+     *
+     */
 
-	@Test
+    @Test
     public void testCorrectDMN() {
-		final String PATH = BASE_PATH + "DmnTaskCheckerTest_CorrectDMN.bpmn";
-		checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
+        final String PATH = BASE_PATH + "DmnTaskCheckerTest_CorrectDMN.bpmn";
+        checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
 
-		// parse bpmn model
-		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+        // parse bpmn model
+        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-		final Collection<BusinessRuleTask> baseElements = modelInstance.getModelElementsByType(BusinessRuleTask.class);
+        final Collection<BusinessRuleTask> baseElements = modelInstance.getModelElementsByType(BusinessRuleTask.class);
 
-		final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
-				new FlowAnalysis());
+        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
+                new FlowAnalysis());
 
         checker.check(element);
 
         if (IssueService.getInstance().getIssues().size() > 0) {
-			Assert.fail("correct DMN-File generates an issue");
-		}
-	}
+            Assert.fail("correct DMN-File generates an issue");
+        }
+    }
 
-	/**
-	 * Case: DMN task without a reference should produce an error
-	 *
-	 */
+    /**
+     * Case: DMN task with wrong DMN-File
+     *
+     */
 
-	@Test
-    public void testDMNTaskWithoutReference() {
-		final String PATH = BASE_PATH + "DmnTaskCheckerTest_WrongDmnTask.bpmn";
-		checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
-
-		// parse bpmn model
-		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
-
-		final Collection<BusinessRuleTask> baseElements = modelInstance.getModelElementsByType(BusinessRuleTask.class);
-
-		final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
-				new FlowAnalysis());
-		final BaseElement baseElement = element.getBaseElement();
-
-        checker.check(element);
-
-        final Collection<CheckerIssue> issues = IssueService.getInstance().getIssues();
-
-		if (issues.size() != 1) {
-			Assert.fail("collection with the issues is bigger or smaller as expected");
-		} else {
-			Assert.assertEquals("Task '" + CheckName.checkName(baseElement) + "' with no dmn reference.",
-					issues.iterator().next().getMessage());
-		}
-	}
-
-	/**
-	 * Case: DMN task with wrong DMN-File
-	 *
-	 */
-
-	@Test
+    @Test
     public void testDMNTaskWithWrongDMN() {
-		final String PATH = BASE_PATH + "DmnTaskCheckerTest_wrongDMNReference.bpmn";
-		checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
+        final String PATH = BASE_PATH + "DmnTaskCheckerTest_wrongDMNReference.bpmn";
+        checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
 
-		// parse bpmn model
-		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+        // parse bpmn model
+        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-		final Collection<BusinessRuleTask> baseElements = modelInstance.getModelElementsByType(BusinessRuleTask.class);
+        final Collection<BusinessRuleTask> baseElements = modelInstance.getModelElementsByType(BusinessRuleTask.class);
 
-		final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
-				new FlowAnalysis());
-		final BaseElement baseElement = element.getBaseElement();
+        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
+                new FlowAnalysis());
+        final BaseElement baseElement = element.getBaseElement();
 
         checker.check(element);
 
         final Collection<CheckerIssue> issues = IssueService.getInstance().getIssues();
 
-		if (issues.size() != 1) {
-			Assert.fail("collection with the issues is bigger or smaller as expected");
-		} else {
-			Assert.assertEquals("Dmn file for task '" + CheckName.checkName(baseElement) + "' not found.",
-					issues.iterator().next().getMessage());
-		}
-	}
+        if (issues.size() != 1) {
+            Assert.fail("collection with the issues is bigger or smaller as expected");
+        } else {
+            Assert.assertEquals("Dmn file for task '" + CheckName.checkName(baseElement) + "' not found.",
+                    issues.iterator().next().getMessage());
+        }
+    }
 
-	/**
-	 * Case: read referenced DMN
-	 *
-	 */
+    /**
+     * Case: read referenced DMN
+     *
+     */
 
-	@Test
+    @Test
     public void testReadReferencedDMNFile() {
-		final String PATH = BASE_PATH + "DmnTaskCheckerTest_ReadReferencedDMN.bpmn";
-		checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
+        final String PATH = BASE_PATH + "DmnTaskCheckerTest_ReadReferencedDMN.bpmn";
+        checker = new DmnTaskChecker(rule, new BpmnScanner(PATH));
 
-		// parse bpmn model
-		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+        // parse bpmn model
+        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-		final Collection<BusinessRuleTask> baseElements = modelInstance.getModelElementsByType(BusinessRuleTask.class);
+        final Collection<BusinessRuleTask> baseElements = modelInstance.getModelElementsByType(BusinessRuleTask.class);
 
-		final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
-				new FlowAnalysis());
+        final BpmnElement element = new BpmnElement(PATH, baseElements.iterator().next(), new ControlFlowGraph(),
+                new FlowAnalysis());
 
         checker.check(element);
 
         if (IssueService.getInstance().getIssues().size() > 1) {
-			Assert.fail("collection with the issues is bigger or smaller as expected");
-		}
-	}
+            Assert.fail("collection with the issues is bigger or smaller as expected");
+        }
+    }
 
-	@Before
+    @Before
     public void clearIssues() {
         IssueService.getInstance().clear();
     }
